# blobify

./: .gitignore  CMakeLists.txt  dependencies.cmake
.github/workflows/: ci.yml
cmake/: blobify-config.cmake  install-dependencies.cmake  warnings.cmake
include/blobify/: load.hpp  memory_storage.hpp  properties.hpp  store.hpp  stream_storage.hpp
include/blobify/detail/: pmd_traits.hpp
tests/: CMakeLists.txt  PreLoad.cmake  bmp.cpp  simple_test.cpp
